# imap-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  deploy.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker.yml
src/imap_mcp/: __init__.py  __main__.py  accounts.py  audit.py  config.py  context.py  errors.py  imap_pool.py  oauth_provider.py  rate_limit.py  ref.py  resolver.py  server.py  setup_wizard.py
src/imap_mcp/tools/: __init__.py  admin.py  batch.py  flags.py  folders.py  messages.py  moves.py  send.py  sieve.py
tests/: conftest.py  test_parity.py
tests/unit/: test_accounts.py  test_admin_tools.py  test_audit.py  test_batch.py  test_config.py  test_errors.py  test_flags.py  test_folder_crud.py  test_folders.py  test_http_transport.py  test_imap_pool.py  test_messages.py  test_moves.py  test_rate_limit.py  test_ref.py  test_resolver.py  test_send.py  test_server.py  test_sieve.py
